--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="utf-8">
@@ -24,7 +24,7 @@
 					<!-- logo image  -->
 					<img src="assets/images/logo.png" alt="Logo">
 
-					Conference 2017
+					BDMC 2023
 				</a>
 			</div>
 
