--- a/index.html
+++ b/index.html
@@ -56,16 +56,15 @@
 
 <header id="site-header" class="site-header valign-center"> 
 	<div class="intro">
-
-		<h2>25 April, 2017 / Townhall California</h2>
-		
-		<h1>Freelancer Conference 2017</h1>
-		
-		<p>First &amp; Largest Conference</p>
-		
-		<a class="btn btn-white" data-scroll href="#registration">Register Now</a>
+      <h1 class="text-capitalize">&nbsp;</h1>
+      <h1 class="text-capitalize">&nbsp;</h1>
+      <h1 class="text-capitalize">&nbsp;</h1>
+      <h1 class="text-capitalize">黄楚君&nbsp;</h1>
+&nbsp;
+	  <p class="text-capitalize">26-28, July, 2023 |&nbsp; PORTO,PORTUGAL</p>
+<a class="btn btn-white" data-scroll href="#registration">Register Now</a>
 	
-	</div>
+  </div>
 </header>
 
 <section id="about" class="section about">
