--- a/index.html
+++ b/index.html
@@ -58,8 +58,7 @@
 	<div class="intro">
       <h1 class="text-capitalize">&nbsp;</h1>
       <h1 class="text-capitalize">&nbsp;</h1>
-      <h1 class="text-capitalize">&nbsp;</h1>
-      <h1 class="text-capitalize">黄楚君&nbsp;</h1>
+      <h1 class="text-capitalize">&nbsp;Bio-Desigh And Manufacturing,2023</h1>
 &nbsp;
 	  <p class="text-capitalize">26-28, July, 2023 |&nbsp; PORTO,PORTUGAL</p>
 <a class="btn btn-white" data-scroll href="#registration">Register Now</a>
